fix-fix text wrap in card for page BusCompany, BusStation, BusRoute

--- a/src/shared/styles/Card.css
+++ b/src/shared/styles/Card.css
@@ -1,10 +1,14 @@
 .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border: 1px solid #ddd;
     border-radius: 10px;
     overflow: hidden;
     background: #fff;
     transition: transform 0.2s ease;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    max-width: 400px;
 }
 
 .card:hover {
@@ -13,16 +17,20 @@
 
 .card img {
     width: 100%;
-    height: 200px;
+    max-height: 200px;
     object-fit: cover;
 }
 
 .card-info {
+    margin: 0;
     display: flex;
     flex-direction: column;
-    padding: 15px 12px;
-    padding-bottom: 36px;
-    gap: 5px;
+    padding: 5px;
+    width: 100%;
+    max-width: 310px;
+    height: 100px;
+    gap: 3px;
+    word-wrap: break-word; 
 }
 
 .card-info h2 {
@@ -32,7 +40,13 @@
 }
 
 .card-info p {
+    font-size: 5px;
     padding: 0;
     margin: 0;
-    color: #777;
+    color: #777; 
+    display: -webkit-box;
+    -webkit-line-clamp: 2; 
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
